# yt_ai

./: README.md  pyproject.toml  requirements.txt  yt-ai.py
.devcontainer/: devcontainer.json
knowledge/: user_preference.txt
src/yt_ai/: crew.py  main.py  patch_sqlite.py
src/yt_ai/config/: agents.yaml  tasks.yaml
src/yt_ai/tools/: youtube_transcript_tool.py
